--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			</div>
 		</section><!-- End Services Section -->
 
-		<section id="products" class="products">
+		<section id="room-categories" class="products">
 			<div class="container">
 
 				<!-- <div class="section-title">
@@ -512,7 +512,7 @@
 				<div class="form">
 					<form action="" method="POST" role="form" class="php-email-form">
 						<h3>
-							<?= $msg; ?>
+						
 						</h3>
 						<div class="row">
 							<div class="col-md-6 form-group">
