Minor code update

--- a/3HE03685AAAA-Alcatel-Lucent.html
+++ b/3HE03685AAAA-Alcatel-Lucent.html
@@ -122,10 +122,10 @@
               <div class="footer-info">
                 <h3>Guza Guest-Inn</h3>
                 <p>
-                  34, Akinyele Street, Aguda,<br>
-                  Surulere Lagos, Nigeria<br><br>
-                  <strong>Phone:</strong> +234 8030 437 609<br>
-                  <strong>Phone:</strong> +234 7085 626 133<br>
+                  NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+                  FCT, NIGERIA<br><br>
+                  <strong>Phone:</strong> 08081027844<br>
+                  <strong>Phone:</strong> 08135383671<br>
                   <strong>Email:</strong> info@desl.com.ng<br>
                 </p>
                 <div class="social-links mt-3">
