--- a/huawei1.html
+++ b/huawei1.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -101,7 +103,7 @@
             <div class="products-description">
               <h2>More of room category detail</h2>
               <h4>Standards</h4>
-                <p>8k, no AC, fan only.</p>
+              <p>8k, no AC, fan only.</p>
             </div>
           </div>
 
@@ -115,56 +117,57 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
 
-            <div class="col-lg-3 col-md-6">
-              <div class="footer-info">
-                <h3>Guza Guest-Inn</h3>
-                <p>
-                  34, Akinyele Street, Aguda,<br>
-                  Surulere Lagos, Nigeria<br><br>
-                  <strong>Phone:</strong> +234 8030 437 609<br>
-                  <strong>Phone:</strong> +234 7085 626 133<br>
-                  <strong>Email:</strong> info@desl.com.ng<br>
-                </p>
-                <div class="social-links mt-3">
-                  <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                  <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                  <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                  <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-info">
+              <h3>Guza Guest-Inn</h3>
+              <p>
+                NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+                FCT, NIGERIA<br><br>
+                <strong>Phone:</strong> 08081027844<br>
+                <strong>Phone:</strong> 08135383671<br>
+                <strong>Email:</strong> info@desl.com.ng<br>
+              </p>
+              <div class="social-links mt-3">
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
-
-            <div class="col-lg-2 col-md-4 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#hero">Home</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Services</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#room-categories">Room Categories</a></li>
-                <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
-              </ul>
-            </div>
-
-
           </div>
-        </div>
-      </div>
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Guza Guest-Inn</span></strong>. All Rights Reserved
-        </div>
-        <div class="someDiv">
+          <div class="col-lg-2 col-md-4 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#hero">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#room-categories">Room Categories</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
+            </ul>
+          </div>
+
+
         </div>
       </div>
+    </div>
+
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Guza Guest-Inn</span></strong>. All Rights Reserved
+      </div>
+      <div class="someDiv">
+      </div>
+    </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
