--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 								<div class="products-links">
 									<a href="assets/img/products/img-2.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Executive"><i class="bx bx-plus"></i></a>
-									<a href="3HE03685AAAA-Alcatel-Lucent.html" title="More Details"><i
+									<a href="executive.html" title="More Details"><i
 											class="bx bx-link"></i></a>
 								</div>
 							</div>
@@ -243,7 +243,8 @@
 								<div class="products-links">
 									<a href="assets/img/products/img-3.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Premium"><i class="bx bx-plus"></i></a>
-									<a href="OptiX OSN 1800 V.html" title="More Details"><i class="bx bx-link"></i></a>
+									
+									<a href="3HE03685AAAA-Alcatel-Lucent.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -486,7 +487,8 @@
 						<div class="contact-address">
 							<i class="bi bi-geo-alt"></i>
 							<h3>Address</h3>
-							<address>34, Akinyele Street, Aguda, Surulere Lagos, Nigeria</address>
+							<address>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+								FCT, NIGERIA</address>
 						</div>
 					</div>
 
@@ -494,8 +496,8 @@
 						<div class="contact-phone">
 							<i class="bi bi-phone"></i>
 							<h3>Phone Number</h3>
-							<p><a href="tel:+2348030437609">+2348030437609</a></p>
-							<p><a href="tel:+2347085626133">+2347085626133</a></p>
+							<p><a href="tel:08081027844">08081027844</a></p>
+							<p><a href="tel:+08135383671">08135383671</a></p>
 						</div>
 					</div>
 
@@ -512,7 +514,7 @@
 				<div class="form">
 					<form action="" method="POST" role="form" class="php-email-form">
 						<h3>
-						
+
 						</h3>
 						<div class="row">
 							<div class="col-md-6 form-group">
@@ -556,8 +558,8 @@
 							<p>
 								NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
 								FCT, NIGERIA<br><br>
-								<strong>Phone:</strong> +234 8081 027 844<br>
-								<strong>Phone:</strong> +234 8135 383 671<br>
+								<strong>Phone:</strong> 08081027844<br>
+								<strong>Phone:</strong> 08135383671<br>
 								<strong>Email:</strong> info@desl.com.ng<br>
 							</p>
 							<div class="social-links mt-3">
