--- a/about.html
+++ b/about.html
@@ -2,229 +2,246 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Room Category Details - Guza Guest-Inn</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+	<title>Room Category Details - Guza Guest-Inn</title>
+	<meta content="" name="description">
+	<meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+	<!-- Favicons -->
+	<link href="assets/img/favicon.png" rel="icon">
+	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+	<!-- Google Fonts -->
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+		rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+	<!-- Vendor CSS Files -->
+	<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+	<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+	<!-- Template Main CSS File -->
+	<link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center">
-    <div class="container d-flex align-items-center justify-content-between">
+	<!-- ======= Header ======= -->
+	<header id="header" class="fixed-top d-flex align-items-center">
+		<div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Guza Guest-Inn</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+			<h1 class="logo"><a href="index.html">Guza Guest-Inn</a></h1>
+			<!-- Uncomment below if you prefer to use an image logo -->
+			<!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="index.html#room-categories">Room Categories</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+			<nav id="navbar" class="navbar">
+				<ul>
+					<li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
+					<li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+					<li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
+					<li><a class="nav-link scrollto " href="index.html#room-categories">Room Categories</a></li>
+					<li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
+					<li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
+				</ul>
+				<i class="bi bi-list mobile-nav-toggle"></i>
+			</nav><!-- .navbar -->
 
 
-    </div>
-  </header><!-- End Header -->
+		</div>
+	</header><!-- End Header -->
 
-  <main id="main">
+	<main id="main">
 
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
+		<!-- ======= Breadcrumbs ======= -->
+		<section id="breadcrumbs" class="breadcrumbs">
+			<div class="container">
 
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>ABOUT US</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>ABOUT US PAGE</li>
-          </ol>
-        </div>
+				<div class="d-flex justify-content-between align-items-center">
+					<h2>ABOUT US</h2>
+					<ol>
+						<li><a href="index.html">Home</a></li>
+						<li>ABOUT US PAGE</li>
+					</ol>
+				</div>
 
-      </div>
-    </section><!-- End Breadcrumbs -->
+			</div>
+		</section><!-- End Breadcrumbs -->
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
+		<!-- ======= About Section ======= -->
+		<section id="about" class="about">
+			<div class="container">
 
-        <div class="row no-gutters">
-          <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
-          <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
-            <div class="content d-flex flex-column justify-content-center">
-              <h3>ABOUT US</h3>
-           <!--    <p>
+				<div class="row no-gutters">
+					<div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start">
+					</div>
+					<div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
+						<div class="content d-flex flex-column justify-content-center">
+							<h3>ABOUT US</h3>
+							<!--    <p>
                 Guza Guest-Inn provide Turnkey End-to-End Infrastructures Development and integration solutions to Communication, Utility, and Technology industries.
                 We have delivered projects for both public and private sector clients including the State Government and the Federal Government. <br>
                 <br>Our reputation for completing projects on time and within budget is widely spread in the region. Management team is made up of a group of experts
                 from across the globe. Each one brings with them years of experience and a passion for excellence in the industry.
               </p> -->
 
-              <div class="row">
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-receipt"></i>
-                  <p><h4>Why Choose Us</h4>
-                  <p>When you Choose Guza Guest-Inn for a warm and inviting atmosphere, exceptional service, and a commitment to your comfort and satisfaction. </p>
-                  <p>Experience the difference and make us your home away from home, whether traveling for business or pleasure.</p></p>
-                </div>
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-cube-alt"></i>
-                  <h4>What We Stand For</h4>
-                  <p>Experience luxury and warmth at Guza Guest-Inn, where exceptional service, fine dining, and a secure environment create a home away from home in Abuja.</p>
-                </div>
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-images"></i>
-                  <h4>Vision</h4>
-                  <p>To become the partner of choice for our clients, and a company whose staff are proud to be an integral part of</p>
-                </div>
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-shield"></i>
-                  <h4>Core Values</h4>
-                  <p>At Guza Guest-Inn, we're dedicated to delivering exceptional hospitality, cleanliness, and service excellence. Our goal is to create a comfortable, convenient, and memorable experience that makes every guest feel welcome and valued.</p>
-                </div>
-              </div>
-            </div><!-- End .content-->
-          </div>
-        </div>
+							<div class="row">
+								<div class="col-md-6 icon-box">
+									<i class="bx bx-receipt"></i>
+									<p>
+									<h4>Why Choose Us</h4>
+									<p>When you Choose Guza Guest-Inn for a warm and inviting atmosphere, exceptional service,
+										and a commitment to your comfort and satisfaction. </p>
+									<p>Experience the difference and make us your home away from home, whether traveling for
+										business or pleasure.</p>
+									</p>
+								</div>
+								<div class="col-md-6 icon-box">
+									<i class="bx bx-cube-alt"></i>
+									<h4>What We Stand For</h4>
+									<p>Experience luxury and warmth at Guza Guest-Inn, where exceptional service, fine dining,
+										and a secure environment create a home away from home in Abuja.</p>
+								</div>
+								<div class="col-md-6 icon-box">
+									<i class="bx bx-images"></i>
+									<h4>Vision</h4>
+									<p>To become the partner of choice for our clients, and a company whose staff are proud to be
+										an integral part of</p>
+								</div>
+								<div class="col-md-6 icon-box">
+									<i class="bx bx-shield"></i>
+									<h4>Core Values</h4>
+									<p>At Guza Guest-Inn, we're dedicated to delivering exceptional hospitality, cleanliness, and
+										service excellence. Our goal is to create a comfortable, convenient, and memorable
+										experience that makes every guest feel welcome and valued.</p>
+								</div>
+							</div>
+						</div><!-- End .content-->
+					</div>
+				</div>
 
-      </div>
-    </section><!-- End About Section -->
+			</div>
+		</section><!-- End About Section -->
 
-    <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
-      <div class="container">
+		<!-- ======= Counts Section ======= -->
+		<section id="counts" class="counts">
+			<div class="container">
 
-        <div class="row no-gutters">
+				<div class="row no-gutters">
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
-            <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="34" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> and still counting</p>
-            </div>
-          </div>
+					<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+						<div class="count-box">
+							<i class="bi bi-emoji-smile"></i>
+							<span data-purecounter-start="0" data-purecounter-end="34" data-purecounter-duration="1"
+								class="purecounter"></span>
+							<p><strong>Happy Clients</strong> and still counting</p>
+						</div>
+					</div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="54" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> done with private & public sectors </p>
-            </div>
-          </div>
+					<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+						<div class="count-box">
+							<i class="bi bi-journal-richtext"></i>
+							<span data-purecounter-start="0" data-purecounter-end="54" data-purecounter-duration="1"
+								class="purecounter"></span>
+							<p><strong>Projects</strong> done with private & public sectors </p>
+						</div>
+					</div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
-            <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="738" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Minutes Of Support</strong> Each day with our call Reps</p>
-            </div>
-          </div>
+					<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+						<div class="count-box">
+							<i class="bi bi-headset"></i>
+							<span data-purecounter-start="0" data-purecounter-end="738" data-purecounter-duration="1"
+								class="purecounter"></span>
+							<p><strong>Minutes Of Support</strong> Each day with our call Reps</p>
+						</div>
+					</div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Our Hard Workers</strong> Doing Wonders </p>
-            </div>
-          </div>
+					<div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+						<div class="count-box">
+							<i class="bi bi-people"></i>
+							<span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1"
+								class="purecounter"></span>
+							<p><strong>Our Hard Workers</strong> Doing Wonders </p>
+						</div>
+					</div>
 
-        </div>
+				</div>
 
-      </div>
-    </section><!-- End Counts Section -->
+			</div>
+		</section><!-- End Counts Section -->
 
-  </main><!-- End #main -->
+	</main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
+	<!-- ======= Footer ======= -->
+	<footer id="footer">
+		<div class="footer-top">
+			<div class="container">
+				<div class="row">
 
-            <div class="col-lg-3 col-md-6">
-              <div class="footer-info">
-                <h3>Guza Guest-Inn</h3>
-                <p>
-                  NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
-                   FCT, NIGERIA<br><br>
-                  <strong>Phone:</strong> +234 8081 027 844<br>
-                  <strong>Phone:</strong> +234 8135 383 671<br>
-                  <strong>Email:</strong> info@desl.com.ng<br>
-                </p>
-                <div class="social-links mt-3">
-                  <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                  <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                  <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                  <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
+					<div class="col-lg-3 col-md-6">
+						<div class="footer-info">
+							<h3>Guza Guest-Inn</h3>
+							<p>
+								NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+								FCT, NIGERIA<br><br>
+								<strong>Phone:</strong> 08081027844<br>
+								<strong>Phone:</strong> 08135383671<br>
+								<strong>Email:</strong> info@desl.com.ng<br>
+							</p>
+							<div class="social-links mt-3">
+								<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+								<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+								<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+								<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+								<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+							</div>
+						</div>
+					</div>
 
-            <div class="col-lg-2 col-md-4 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#hero">Home</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Services</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html#room-categories">Room Categories</a></li>
-                <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
-              </ul>
-            </div>
+					<div class="col-lg-2 col-md-4 footer-links">
+						<h4>Useful Links</h4>
+						<ul>
+							<li><i class="bx bx-chevron-right"></i> <a href="index.html#hero">Home</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Services</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="index.html#room-categories">Room Categories</a>
+							</li>
+							<!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
+						</ul>
+					</div>
 
 
-          </div>
-        </div>
-      </div>
+				</div>
+			</div>
+		</div>
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Guza Guest-Inn</span></strong>. All Rights Reserved
-        </div>
-        <div class="someDiv">
-        </div>
-      </div>
-  </footer><!-- End Footer -->
+		<div class="container">
+			<div class="copyright">
+				&copy; Copyright <strong><span>Guza Guest-Inn</span></strong>. All Rights Reserved
+			</div>
+			<div class="someDiv">
+			</div>
+		</div>
+	</footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+			class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+	<!-- Vendor JS Files -->
+	<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+	<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+	<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+	<script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+	<!-- Template Main JS File -->
+	<script src="assets/js/main.js"></script>
 
 </body>
 
