Minor code updates.

--- a/executive.html
+++ b/executive.html
@@ -129,7 +129,7 @@
                 FCT, NIGERIA<br><br>
                 <strong>Phone:</strong> 08081027844<br>
                 <strong>Phone:</strong> 08135383671<br>
-                <strong>Email:</strong> info@desl.com.ng<br>
+                <strong>Email:</strong> guzaguestinn@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
