Minor code updae.

--- a/index.html
+++ b/index.html
@@ -500,12 +500,12 @@
 							<p><a href="tel:+08135383671">08135383671</a></p>
 						</div>
 					</div>
-
+				
 					<div class="col-md-4">
 						<div class="contact-email">
 							<i class="bi bi-envelope"></i>
 							<h3>Email</h3>
-							<p><a href="mailto:info@desl.com.ng">info@desl.com.ng</a></p>
+							<p><a href="mailto:guzaguestinn@gmail.com">guzaguestinn@gmail.com</a></p>
 						</div>
 					</div>
 
