--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="carousel-inner" role="listbox">
 
 					<!-- Slide 1 -->
-					<div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
+					<div class="carousel-item active" style="background-image: url(assets/img/slide_shows_pics/Slide1.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Experience the comfort of home</h2>
@@ -81,7 +81,7 @@
 					</div>
 
 					<!-- Slide 2 -->
-					<div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
+					<div class="carousel-item" style="background-image: url(assets/img/slide_shows_pics/Slide2.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Warm Hospitality</h2>
@@ -97,7 +97,7 @@
 					</div>
 
 					<!-- Slide 3 -->
-					<div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
+					<div class="carousel-item" style="background-image: url(assets/img/slide_shows_pics/Slide3.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Your Home Away from Home</h2>
@@ -205,12 +205,12 @@
 
 					<div class="col-lg-4 col-md-6 products-item filter-zte">
 						<div class="products-wrap">
-							<img src="assets/img/products/img-1.jpg" class="img-fluid" alt="">
+							<img src="assets/img/standard_room/standard_room1.jpg" class="img-fluid" alt="">
 							<div class="products-info">
 								<h4>Standards</h4>
 								<p>8k, no AC, fan only.</p>
 								<div class="products-links">
-									<a href="assets/img/products/img-1.jpg" data-gallery="productsGallery"
+									<a href="assets/img/standard_room/standard_room1.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Standards"><i class="bx bx-plus"></i></a>
 									<a href="huawei1.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
@@ -220,12 +220,12 @@
 
 					<div class="col-lg-4 col-md-6 products-item filter-nokia">
 						<div class="products-wrap">
-							<img src="assets/img/products/img-2.jpg" class="img-fluid" alt="">
+							<img src="assets/img/executive_room/executive_room1.jpg" class="img-fluid" alt="">
 							<div class="products-info">
 								<h4>Executive</h4>
 								<p>12k, has AC and fan, but no water heater.</p>
 								<div class="products-links">
-									<a href="assets/img/products/img-2.jpg" data-gallery="productsGallery"
+									<a href="assets/img/executive_room/executive_room1.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Executive"><i class="bx bx-plus"></i></a>
 									<a href="executive.html" title="More Details"><i
 											class="bx bx-link"></i></a>
@@ -236,12 +236,12 @@
 
 					<div class="col-lg-4 col-md-6 products-item filter-ericsson">
 						<div class="products-wrap">
-							<img src="assets/img/products/img-3.jpg" class="img-fluid" alt="">
+							<img src="assets/img/premium_room/Premium1.jpg" class="img-fluid" alt="">
 							<div class="products-info">
 								<h4>Premium</h4>
 								<p>15k, with water heater, dressing mirror, wardrobe, AC, and fan.</p>
 								<div class="products-links">
-									<a href="assets/img/products/img-3.jpg" data-gallery="productsGallery"
+									<a href="assets/img/premium_room/Premium1.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Premium"><i class="bx bx-plus"></i></a>
 									
 									<a href="3HE03685AAAA-Alcatel-Lucent.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -254,12 +254,12 @@
 
 					<div class="col-lg-4 col-md-6 products-item filter-zte">
 						<div class="products-wrap">
-							<img src="assets/img/products/pro1.jpg" class="img-fluid" alt="">
+							<img src="assets/img/standard_room/standard_room2.jpg" class="img-fluid" alt="">
 							<div class="products-info">
-								<h4>Huawei</h4>
-								<p>GPSF Huawei GPON</p>
+								<h4>Standards</h4>
+								<p>8k, no AC, fan only.</p>
 								<div class="products-links">
-									<a href="assets/img/products/pro1.jpg" data-gallery="productsGallery"
+									<a href="assets/img/standard_room/standard_room2.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
 									<a href="GPSF Huawei GPON.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
@@ -269,12 +269,12 @@
 
 					<div class="col-lg-4 col-md-6 products-item filter-zte">
 						<div class="products-wrap">
-							<img src="assets/img/products/pro2.jpg" class="img-fluid" alt="">
+							<img src="assets/img/standard_room/standard_room3.jpg" class="img-fluid" alt="">
 							<div class="products-info">
-								<h4>ZTE</h4>
-								<p>ZXD800E</p>
+								<h4>Standards</h4>
+								<p>8k, no AC, fan only.</p>
 								<div class="products-links">
-									<a href="assets/img/products/pro2.jpg" data-gallery="productsGallery"
+									<a href="assets/img/standard_room/standard_room3.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="ZTE 3"><i class="bx bx-plus"></i></a>
 									<a href="ZXD800E.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
@@ -282,16 +282,29 @@
 						</div>
 					</div>
 
-
+					<div class="col-lg-4 col-md-6 products-item filter-zte">
+						<div class="products-wrap">
+							<img src="assets/img/standard_room/standard_room4.jpg" class="img-fluid" alt="">
+							<div class="products-info">
+								<h4>Standards</h4>
+								<p>8k, no AC, fan only.</p>
+								<div class="products-links">
+									<a href="assets/img/standard_room/standard_room4.jpg" data-gallery="productsGallery"
+										class="products-lightbox" title="ZTE 3"><i class="bx bx-plus"></i></a>
+									<a href="ZXD800E.html" title="More Details"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
 
 					<div class="col-lg-4 col-md-6 products-item filter-nokia">
 						<div class="products-wrap">
-							<img src="assets/img/products/pro3.jpg" class="img-fluid" alt="">
+							<img src="assets/img/executive_room/executive_room2.jpg" class="img-fluid" alt="">
 							<div class="products-info">
-								<h4>Nokia</h4>
-								<p>Nokia FOSN 472811A</p>
+								<h4>Executive</h4>
+								<p>12k, has AC and fan, but no water heater.</p>
 								<div class="products-links">
-									<a href="assets/img/products/pro3.jpg" data-gallery="productsGallery"
+									<a href="assets/img/executive_room/executive_room2.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Nokia 3"><i class="bx bx-plus"></i></a>
 									<a href="Nokia FOSN 472811A.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
@@ -299,15 +312,29 @@
 						</div>
 					</div>
 
+					<div class="col-lg-4 col-md-6 products-item filter-nokia">
+						<div class="products-wrap">
+							<img src="assets/img/executive_room/executive_room3.jpg" class="img-fluid" alt="">
+							<div class="products-info">
+								<h4>Executive</h4>
+								<p>12k, has AC and fan, but no water heater.</p>
+								<div class="products-links">
+									<a href="assets/img/executive_room/executive_room3.jpg" data-gallery="productsGallery"
+										class="products-lightbox" title="Nokia 3"><i class="bx bx-plus"></i></a>
+									<a href="Nokia TA21572.html" title="More Details"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
 
 					<div class="col-lg-4 col-md-6 products-item filter-nokia">
 						<div class="products-wrap">
-							<img src="assets/img/products/pro4.jpg" class="img-fluid" alt="">
+							<img src="assets/img/executive_room/executive_room4.jpg" class="img-fluid" alt="">
 							<div class="products-info">
-								<h4>Nokia</h4>
-								<p>Nokia TA21572</p>
+								<h4>Executive</h4>
+								<p>12k, has AC and fan, but no water heater.</p>
 								<div class="products-links">
-									<a href="assets/img/products/pro4.jpg" data-gallery="productsGallery"
+									<a href="assets/img/executive_room/executive_room4.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Nokia 3"><i class="bx bx-plus"></i></a>
 									<a href="Nokia TA21572.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
@@ -333,12 +360,12 @@
 
 					<div class="col-lg-4 col-md-6 products-item filter-ericsson">
 						<div class="products-wrap">
-							<img src="assets/img/products/pro1.jpg" class="img-fluid" alt="">
+							<img src="assets/img/premium_room/Premium2.jpg" class="img-fluid" alt="">
 							<div class="products-info">
-								<h4>Ericsson</h4>
-								<p>Ericsson ROJ11923151</p>
+								<h4>Premium</h4>
+								<p>15k, with water heater, dressing mirror, wardrobe, AC, and fan.</p>
 								<div class="products-links">
-									<a href="assets/img/products/pro1.jpg" data-gallery="productsGallery"
+									<a href="assets/img/premium_room/Premium2.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Nokia 3"><i class="bx bx-plus"></i></a>
 									<a href="Ericsson ROJ11923151.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
@@ -348,12 +375,40 @@
 
 					<div class="col-lg-4 col-md-6 products-item filter-ericsson">
 						<div class="products-wrap">
-							<img src="assets/img/products/pro2.jpg" class="img-fluid" alt="">
+							<img src="assets/img/premium_room/Premium3.jpg" class="img-fluid" alt="">
 							<div class="products-info">
-								<h4>Ericsson </h4>
-								<p>Ericsson  1HAT60937ACW</p>
+								<h4>Premium</h4>
+								<p>15k, with water heater, dressing mirror, wardrobe, AC, and fan.</p>
 								<div class="products-links">
-									<a href="assets/img/products/pro2.jpg" data-gallery="productsGallery"
+									<a href="assets/img/premium_room/Premium3.jpg" data-gallery="productsGallery"
+										class="products-lightbox" title="Nokia 3"><i class="bx bx-plus"></i></a>
+									<a href="Ericsson  1HAT60937ACW.html" title="More Details"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 products-item filter-ericsson">
+						<div class="products-wrap">
+							<img src="assets/img/premium_room/Premium4.jpg" class="img-fluid" alt="">
+							<div class="products-info">
+								<h4>Premium</h4>
+								<p>15k, with water heater, dressing mirror, wardrobe, AC, and fan.</p>
+								<div class="products-links">
+									<a href="assets/img/premium_room/Premium4.jpg" data-gallery="productsGallery"
+										class="products-lightbox" title="Nokia 3"><i class="bx bx-plus"></i></a>
+									<a href="Ericsson  1HAT60937ACW.html" title="More Details"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 products-item filter-ericsson">
+						<div class="products-wrap">
+							<img src="assets/img/premium_room/Premium5.jpg" class="img-fluid" alt="">
+							<div class="products-info">
+								<h4>Premium</h4>
+								<p>15k, with water heater, dressing mirror, wardrobe, AC, and fan.</p>
+								<div class="products-links">
+									<a href="assets/img/premium_room/Premium5.jpg" data-gallery="productsGallery"
 										class="products-lightbox" title="Nokia 3"><i class="bx bx-plus"></i></a>
 									<a href="Ericsson  1HAT60937ACW.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
