--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="carousel-inner" role="listbox">
 
 					<!-- Slide 1 -->
-					<div class="carousel-item active" style="background-image: url(assets/img/slide_shows_pics/Slide1.jpg);">
+					<div class="carousel-item active" style="background-image: url(assets/img/slide/Slide1.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Experience the comfort of home</h2>
@@ -81,7 +81,7 @@
 					</div>
 
 					<!-- Slide 2 -->
-					<div class="carousel-item" style="background-image: url(assets/img/slide_shows_pics/Slide2.jpg);">
+					<div class="carousel-item" style="background-image: url(assets/img/slide/Slide2.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Warm Hospitality</h2>
@@ -97,7 +97,7 @@
 					</div>
 
 					<!-- Slide 3 -->
-					<div class="carousel-item" style="background-image: url(assets/img/slide_shows_pics/Slide3.jpg);">
+					<div class="carousel-item" style="background-image: url(assets/img/slide/Slide3.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Your Home Away from Home</h2>
