--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Guza Guest-Inn</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
+
 	<!-- Favicons -->
 	<link href="assets/img/favicon.png" rel="icon">
 	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -65,7 +66,7 @@
 				<div class="carousel-inner" role="listbox">
 
 					<!-- Slide 1 -->
-					<div class="carousel-item active" style="background-image: url(assets/img/slide/Slide1.jpg);">
+					<div class="carousel-item active" style="background-image: url(assets/img/slide_shows_pics/Slide1.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Experience the comfort of home</h2>
@@ -80,7 +81,7 @@
 					</div>
 
 					<!-- Slide 2 -->
-					<div class="carousel-item" style="background-image: url(assets/img/slide/Slide2.jpg);">
+					<div class="carousel-item" style="background-image: url(assets/img/slide_shows_pics/Slide2.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Warm Hospitality</h2>
@@ -96,7 +97,7 @@
 					</div>
 
 					<!-- Slide 3 -->
-					<div class="carousel-item" style="background-image: url(assets/img/slide/Slide3.jpg);">
+					<div class="carousel-item" style="background-image: url(assets/img/slide_shows_pics/Slide3.jpg);">
 						<div class="carousel-container">
 							<div class="carousel-content">
 								<h2 class="animate__animated animate__fadeInDown">Your Home Away from Home</h2>
@@ -281,7 +282,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 products-item filter-zte">
+					<!-- <div class="col-lg-4 col-md-6 products-item filter-zte">
 						<div class="products-wrap">
 							<img src="assets/img/standard_room/standard_room4.jpg" class="img-fluid" alt="">
 							<div class="products-info">
@@ -294,7 +295,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="col-lg-4 col-md-6 products-item filter-nokia">
 						<div class="products-wrap">
@@ -326,7 +327,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 products-item filter-nokia">
+					<!-- <div class="col-lg-4 col-md-6 products-item filter-nokia">
 						<div class="products-wrap">
 							<img src="assets/img/executive_room/executive_room4.jpg" class="img-fluid" alt="">
 							<div class="products-info">
@@ -339,7 +340,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 
 					<!-- <div class="col-lg-4 col-md-6 products-item filter-ericsson">
@@ -400,7 +401,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 products-item filter-ericsson">
+					<!-- <div class="col-lg-4 col-md-6 products-item filter-ericsson">
 						<div class="products-wrap">
 							<img src="assets/img/premium_room/Premium5.jpg" class="img-fluid" alt="">
 							<div class="products-info">
@@ -413,7 +414,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 
 
