--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
 						<div class="contact-address">
 							<i class="bi bi-geo-alt"></i>
 							<h3>Address</h3>
-							<address>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
-								FCT, NIGERIA</address>
+							<address><a href="https://maps.app.goo.gl/Q9o5BVvQtPqwhe4fA" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+									FCT, NIGERIA</a></address>
 						</div>
 					</div>
 
@@ -611,11 +611,14 @@
 						<div class="footer-info">
 							<h3>Guza Guest-Inn</h3>
 							<p>
-								NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
-								FCT, NIGERIA<br><br>
+								<!-- NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+								FCT, NIGERIA<br><br> -->
 								<strong>Phone:</strong> 08081027844<br>
 								<strong>Phone:</strong> 08135383671<br>
 								<strong>Email:</strong> guzaguestinn@gmail.com<br>
+								<strong>Address:</strong> 
+								<a href="https://maps.app.goo.gl/Q9o5BVvQtPqwhe4fA" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+									FCT, NIGERIA</a><br>
 							</p>
 							<div class="social-links mt-3">
 								<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -631,7 +634,7 @@
 						<h4>Useful Links</h4>
 						<ul>
 							<li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
 							<li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
 							<li><i class="bx bx-chevron-right"></i> <a href="#room-categories">Room Categories</a></li>
 							<!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
