--- a/about.html
+++ b/about.html
@@ -192,6 +192,9 @@
 								<strong>Phone:</strong> 08081027844<br>
 								<strong>Phone:</strong> 08135383671<br>
 								<strong>Email:</strong> guzaguestinn@gmail.com<br>
+								<strong>Address:</strong> 
+								<a href="https://maps.app.goo.gl/Q9o5BVvQtPqwhe4fA" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+									FCT, NIGERIA</a><br>
 							</p>
 							<div class="social-links mt-3">
 								<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
