--- a/about.html
+++ b/about.html
@@ -187,11 +187,11 @@
 						<div class="footer-info">
 							<h3>Guza Guest-Inn</h3>
 							<p>
-								NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
-								FCT, NIGERIA<br><br>
+<!-- 								NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+								FCT, NIGERIA<br><br> -->
 								<strong>Phone:</strong> 08081027844<br>
 								<strong>Phone:</strong> 08135383671<br>
-								<strong>Email:</strong> guzaguestinn@gmail.com<br>
+								<strong>Email:</strong> <a href="guzaguestinn@gmail.com">guzaguestinn@gmail.com</a><br>
 								<strong>Address:</strong> 
 								<a href="https://maps.app.goo.gl/Q9o5BVvQtPqwhe4fA" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
 									FCT, NIGERIA</a><br>
