--- a/about.html
+++ b/about.html
@@ -191,9 +191,9 @@
 								FCT, NIGERIA<br><br> -->
 								<strong>Phone:</strong> 08081027844<br>
 								<strong>Phone:</strong> 08135383671<br>
-								<strong>Email:</strong> <a href="guzaguestinn@gmail.com">guzaguestinn@gmail.com</a><br>
+								<strong>Email:</strong> <a class="text-white" href="guzaguestinn@gmail.com">guzaguestinn@gmail.com</a><br>
 								<strong>Address:</strong> 
-								<a href="https://maps.app.goo.gl/Q9o5BVvQtPqwhe4fA" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
+								<a class="text-white" href="https://maps.app.goo.gl/Q9o5BVvQtPqwhe4fA" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>NO, 47, PIWOYI VILLAGE, ALONG AIRPORT ROAD, ABUJA<br>
 									FCT, NIGERIA</a><br>
 							</p>
 							<div class="social-links mt-3">
